# agent-slop-lint

./: .gitignore  .slop.toml  CHANGELOG.md  CITATIONS.md  CLAUDE.md  NOTICE  README.md  SETUP.md  event.json  llms.txt  pyproject.toml
.github/workflows/: publish.yml  test.yml
.mainline/: config.toml
docs/: C.md  CONFIG.md  CPP.md  JULIA.md  README.md  RUBY.md  SETUP.md  after.md  before.md  devto.md  dogfood-deps-kernel.md  linkedin.md  post.md  references.md  the-ceremonial-reviewer.md  the-defensible-subset.md  why-external-metrics.md
docs/backlog/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md
docs/philosophy/: artifact-proxies.md  composition-and-lexical.md  naming-spec.md  references.md  the-defensible-subset.md  why-slop-exists.md
docs/research/: identifier-vocabulary.md
docs/rules/: COMPREHENSION.md  LEXICAL.md  README.md  SEMANTIC.md  STRUCTURAL.md  TAXONOMY.md
scratch/lexicon/: README.md  __init__.py  _naming.py  lexeme.py  lexicon.py  words.py
scripts/: install.ps1  install.sh
src/: .slop.toml  README.md  pyproject.toml
src/cli/slop/: KERNELS_LICENSE  __init__.py  _compat.py  cli.py  config.py  engine.py  models.py  output.py  preflight.py
src/cli/slop/_ast/: query.py  treesitter.py
src/cli/slop/_aux/: __init__.py
src/cli/slop/_aux/kernels/: halstead.py  npath.py  prune.py  robert.py
src/cli/slop/_aux/util/: doctor.py  git.py  treesitter.py
src/cli/slop/_compose/: hotspots.py  prune.py  usages.py
src/cli/slop/_fs/: __init__.py  find.py
src/cli/slop/_lexical/: _naming.py  _words.py  boilerplate_docstrings.py  cowards.py  identifier_singletons.py  identifier_tokens.py  imposters.py  name_verbosity.py  numbered_variants.py  slackers.py  sprawl.py  stutter.py  tautology.py  type_tag_suffixes.py  verbosity.py  weasel_words.py
src/cli/slop/_skill/: SKILL.md
src/cli/slop/_skill/references/: 01_SUMMARY.md  04_PROCEDURE.md
src/cli/slop/_skill/scripts/: skill.sh
src/cli/slop/_structural/: any_type_density.py  ccx.py  ck.py  clone_density.py  composition.py  deps.py  god_module.py  halstead.py  local_imports.py  magic_literals.py  npath.py  out_parameters.py  robert.py  section_comments.py  sibling_calls.py  stringly_typed.py
src/cli/slop/_util/: doctor.py
src/cli/slop/rules/: __init__.py  any_type_density.py  architecture.py  boilerplate_docstrings.py  class_metrics.py  clone_density.py  complexity.py  composition.py  dead_code.py  dependencies.py  halstead.py  hammers.py  hotspots.py  identifier_singletons.py  imposters.py  local_imports.py  magic_literals.py  name_verbosity.py  npath.py  numbered_variants.py  section_comments.py  sibling_calls.py  slackers.py  stutter.py  tautology.py  tersity.py  type_tag_suffixes.py  verbosity.py  weasel_words.py
src/slop/: __init__.py  cli.py  color.py  config.py  engine.py  models.py  output.py  preflight.py
src/slop/_aux/: __init__.py
src/slop/_aux/kernels/: ccx.py  ck.py  deps.py  find.py  grep.py  hotspots.py  prune.py  query.py  usages.py
src/slop/_aux/util/: doctor.py
src/slop/_skill/references/: 01_SUMMARY.md  04_PROCEDURE.md
src/slop/rules/: __init__.py  architecture.py  class_metrics.py  complexity.py  dead_code.py  dependencies.py  hotspots.py
src/tests/: test_cli.py  test_config.py  test_engine.py  test_lexicon.py  test_output.py
src/tests/test_rules/: test_any_type_density.py  test_architecture.py  test_c.py  test_class_metrics.py  test_clone_density.py  test_complexity.py  test_composition.py  test_confusion.py  test_cpp.py  test_dependencies.py  test_god_module.py  test_halstead.py  test_julia.py  test_lexical_new.py  test_local_imports.py  test_magic_literals.py  test_npath.py  test_out_parameters.py  test_ruby.py  test_section_comments.py  test_sibling_calls.py  test_slackers.py  test_sprawl_imposters.py  test_stringly_typed.py  test_stutter.py  test_tersity.py  test_verbosity.py
tests/: test_cli.py  test_config.py  test_engine.py  test_output.py
tests/test_rules/: test_class_metrics.py  test_complexity.py  test_dependencies.py  test_hotspots.py
(+140 files in other folders)
