[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-slop-lint"
version = "1.0.3"
description = "Agentic code quality linter — catches slop before it becomes architectural rot"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Jordan Godau" }]
keywords = ["linter", "code-quality", "complexity", "coupling", "agentic", "slop"]
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "tree-sitter-bash>=0.21.0",
    "tree-sitter-c-sharp>=0.21.0",
    "tree-sitter-julia>=0.21.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
slop = "slop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cli/slop"]

[tool.hatch.build.targets.sdist]
include = ["cli/slop", "tests", "pyproject.toml", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "cli/slop/_fs",
    "cli/slop/_text",
    "cli/slop/_ast",
    "cli/slop/_compose",
    "cli/slop/_structural",
    "cli/slop/_lexical",
    "cli/slop/_util",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
